Run rewrite rule org.openrewrite.java.migrate.UpgradeToJava17.